# sistema_de_gestion

./: .gitignore  CMakeLists.txt  archivo.cpp  archivo.h  black.cpp  black.h  clientes.cpp  clientes.h  cuenta.cpp  cuenta.h  deposito.cpp  deposito.h  extracciones.cpp  extracciones.h  main.cpp  oro.cpp  oro.h  plata.cpp  plata.h  transaccion.cpp  transaccion.h
